objects/Condition_Party__c.object
<CustomObject>
    <fields>
        <fullName>Agreement_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agreement Party</label>
        <referenceTo>Agreement_Party__c</referenceTo>
        <relationshipLabel>Condition Parties</relationshipLabel>
        <relationshipName>Condition_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <referenceTo>Condition__c</referenceTo>
        <relationshipLabel>Condition Parties</relationshipLabel>
        <relationshipName>Condition_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalConditionPartyId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalConditionPartyId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End__c</fullName>
        <formula>IF(ISPICKVAL( Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c , &quot;JANUARY&quot;), 
DATE( YEAR( TODAY() ), 01 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;FEBRUARY&quot;), 
DATE( YEAR( TODAY() ), 02 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;MARCH&quot;), 
DATE( YEAR( TODAY() ), 03 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;APRIL&quot;), 
DATE( YEAR( TODAY() ), 04 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;MAY&quot;), 
DATE( YEAR( TODAY() ), 05 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;JUNE&quot;), 
DATE( YEAR( TODAY() ), 06 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;JULY&quot;), 
DATE( YEAR( TODAY() ), 07 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;AUGUST&quot;), 
DATE( YEAR( TODAY() ), 08 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;SEPTEMBER&quot;), 
DATE( YEAR( TODAY() ), 09 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;OCTOBER&quot;), 
DATE( YEAR( TODAY() ), 10 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;NOVEMBER&quot;), 
DATE( YEAR( TODAY() ), 11 + 1, 1 ) -1, IF(ISPICKVAL(Agreement_Party__r.Deal_Party__r.Relationship__r.Financial_Year_End_Month__c, &quot;DECEMBER&quot;), 
DATE( YEAR( TODAY() ), 12, 31 ), null) ) ) ) ) ) ) ) ) ) ) )</formula>
        <label>Financial Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <formula>TEXT(Agreement_Party__r.Deal_Party__r.Party_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <formula>Agreement_Party__r.Deal_Party__r.Relationship__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Condition Party</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Condition Party #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>